# mewgenics-cat-smuggling

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-pages.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  kv.db  main.py  pyproject.toml
src/: App.vue  main.ts  style.css
src/components/: CatDetailCard.vue  CatSummaryCard.vue  ExportView.vue  ImportView.vue
src/config/: share.ts
src/i18n/: en.ts  index.ts  zh.ts
src/lib/save/: binary.ts  catInfo.ts  catInfoTest.ts  catTransfer.ts  houseState.ts  importCatBlob.ts  index.ts  lz4.ts  roundtripTest.ts  sqlite.ts
src/router/: index.ts
src/stores/: exportFlow.ts  importFlow.ts
src/types/: lz4js.d.ts
src/utils/: infoBlindWatermark.ts  qrPayload.ts  shareImage.ts  shareQrImage.ts  shareTransfer.ts
src/views/: HomeView.vue
src/views/export/: ExportDetailsView.vue  ExportSelectView.vue  ExportUploadView.vue
src/views/import/: ImportApplyView.vue  ImportEditView.vue  ImportLoadView.vue
tests/: import-cat-blob.spec.ts  info-blind-watermark.spec.ts  save-fixture.spec.ts  share-image-png.spec.ts
tests/fixtures/: steamcampaign01.truth.sav
